# ady_fpt

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  index.html  main.py  model_with_threshold.pkl  pyproject.toml
docker/: init.sql
